# neural-fokker-planck

./: .gitignore  LICENSE  NOTES.md  README.md  pyproject.toml  run_benchmarks.sh
experiments/: benchmark_systems.py  black_scholes.py  double_well.py  identification.py  multi_d_ou.py  pfi_benchmark.py  propagation.py  snapshot_learning.py  timing_comparison.py
nfpe/: __init__.py  data.py  models.py  propagators.py  training.py  utils.py
tests/: test_data.py  test_models.py  test_training.py
