[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nfpe"
version = "0.1.0"
description = "Neural Fokker-Planck Equations: learning SDEs from distribution snapshots via deterministic moment dynamics"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Alessandro Zuliani"},
]
dependencies = [
    "torch>=2.0",
    "torchsde>=0.2.5",
    "torchdiffeq>=0.2.3",
    "matplotlib>=3.5",
    "scikit-learn>=1.0",
    "numpy>=1.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jupyter",
]

[tool.setuptools.packages.find]
include = ["nfpe*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
